# PyWeb_HW_7

./: config.ini  main.py  models.py  pyproject.toml  repository.py
alembic/: env.py
alembic/versions/: 1d21f09e6f3b_init.py  6bd252ea05ec_init.py  b4c4fab2feef_init.py  deb92f04f738_init.py
database/: connect_db.py  models7.py
datebase/: connect_db.py  models7.py
seed/: create_seed.py  disciplines.py  grades.py  groups.py  relationship.py  students.py  teachers.py
