[tool.poetry]
name = "pyweb-hw-7"
version = "0.1.0"
description = ""
authors = ["GkiriChen <128749954+GkiriChen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
alembic = "1.9.1"
faker = "^19.12.0"
sqlalchemy = "^2.0.22"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
